--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,8 @@ spring:
     active: local
 
 spring.batch.job.names : ${job.name:NONE}
+
+logging.level.org.springframework.batch: DEBUG
 ---
 spring:
   profiles: local
